<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.HomeFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/home_member_info"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/view_margins_narrow"
        android:layout_marginTop="@dimen/view_margins"
        android:layout_marginEnd="@dimen/view_margins_narrow"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/home_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_margins"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="@dimen/view_margins"
                android:text="@string/home_username"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/home_member_since"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_username"
                android:layout_alignStart="@id/home_username"
                android:text="@string/home_member_since"
                android:textAllCaps="true"
                android:textColor="@color/opaqueWhite"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/home_rewards_club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/view_margins"
                android:layout_marginEnd="@dimen/view_margins"
                android:layout_marginBottom="@dimen/view_margins"
                android:text="@string/home_rewards_club_title"
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:alpha="0.05"
                android:rotation="-15"
                android:scaleType="centerCrop"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:srcCompat="@drawable/ic_omega" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/user_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_member_info"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/view_margins">

        <TextView
            android:id="@+id/home_user_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margins"
            android:layout_marginEnd="@dimen/view_margins"
            android:text="@string/home_user_section_title"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_user_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_user_title"
            android:layout_marginStart="@dimen/view_margins"
            android:layout_marginEnd="@dimen/view_margins"
            android:text="@string/home_user_description"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/admin_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_member_info"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/view_margins">

        <TextView
            android:id="@+id/home_admin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margins"
            android:layout_marginEnd="@dimen/view_margins"
            android:text="@string/home_admin_settings"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_admin_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_admin_title"
            android:layout_marginStart="@dimen/view_margins"
            android:layout_marginEnd="@dimen/view_margins"
            android:text="@string/home_admin_description"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/home_manage_flights"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/home_admin_description"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/view_margins"
            android:layout_marginTop="@dimen/view_margins"
            android:layout_marginEnd="@dimen/view_margins"
            android:background="@drawable/light_button"
            android:text="@string/home_admin_manage_flights" />

        <Button
            android:id="@+id/home_view_logs"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/home_manage_flights"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/view_margins"
            android:layout_marginTop="@dimen/view_margins"
            android:layout_marginEnd="@dimen/view_margins"
            android:background="@drawable/light_button"
            android:text="@string/home_admin_view_logs" />

    </RelativeLayout>

    <Button
        android:id="@+id/main_signout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/view_margins"
        android:layout_marginTop="@dimen/view_margins"
        android:layout_marginEnd="@dimen/view_margins"
        android:layout_marginBottom="@dimen/view_margins"
        android:background="@drawable/accent_button"
        android:text="@string/home_signout"
        android:textColor="@android:color/white" />

</RelativeLayout>