<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/welcome_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_omega" />

    <TextView
        android:id="@+id/welcome_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/welcome_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_app_name"
        android:layout_marginTop="5dp"
        android:text="@string/app_tagline"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/welcome_username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_tagline"
        android:layout_alignStart="@+id/welcome_username"
        android:layout_marginTop="@dimen/view_margins"
        android:text="@string/hint_username"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/welcome_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_username_title"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/view_margins"
        android:layout_marginEnd="@dimen/view_margins"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@color/opaqueWhite" />

    <TextView
        android:id="@+id/welcome_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_username"
        android:layout_marginTop="@dimen/view_margins_narrow"
        android:layout_alignStart="@id/welcome_password"
        android:text="@string/hint_password"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/welcome_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_password_title"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/view_margins"
        android:layout_marginEnd="@dimen/view_margins"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@color/opaqueWhite" />

    <Button
        android:id="@+id/welcome_signin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/welcome_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/view_margins"
        android:layout_marginTop="@dimen/view_margins"
        android:layout_marginEnd="@dimen/view_margins"
        android:background="@drawable/accent_button"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/welcome_signup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/welcome_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/view_margins"
        android:layout_marginEnd="@dimen/view_margins"
        android:layout_marginTop="@dimen/view_margins"
        android:background="@drawable/light_button"
        android:text="@string/create_account"
        android:textColor="@android:color/black" />

</RelativeLayout>